crates/coducktor-tui/src/widgets/snapshots/coducktor_tui__widgets__transcript__tests__transcript_collapsed_80x24.snap
---
source: crates/coducktor-tui/src/widgets/transcript.rs
expression: "snapshot_at(false, width, height, ThemeName::Dark)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "▌ Add retry logic to the sync job.                                              ",
        "                                                                                ",
        "● I'll add exponential backoff to sync_job.                                     ",
        "                                                                                ",
        "▸ Thinking — The job currently retries immediately on failure.                  ",
        "                                                                                ",
        "▸ ╭─── ✎ Edit src/sync_job.rs ─────────────────────────────────────────────────╮",
        "  │ └─ file_path=src/sync_job.rs                                               │",
        "  ╰────────────────────────────────────────────────────────────────────────────╯",
        "                                                                                ",
        "▸ ╭─── ❯ Ran cargo test sync_job: Run the sync job tests ──────────────────────╮",
        "  │ └─ command=cargo test sync_job description=Run the sync job tests          │",
        "  ╰────────────────────────────────────────────────────────────────────────────╯",
        "                                                                                ",
        "· session resumed after usage limit                                             ",
        "                                                                                ",
        "· ▀                                                                             ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(61, 66, 74), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Rgb(235, 238, 242), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(168, 216, 80), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Rgb(235, 238, 242), bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 2, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 42, y: 2, fg: Rgb(235, 238, 242), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: DIM,
        x: 62, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 7, y: 6, fg: Rgb(120, 200, 120), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Rgb(120, 200, 120), bg: Rgb(29, 32, 36), underline: Reset, modifier: BOLD,
        x: 13, y: 6, fg: Rgb(235, 238, 242), bg: Rgb(29, 32, 36), underline: Reset, modifier: BOLD,
        x: 29, y: 6, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 30, y: 6, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: Rgb(157, 164, 174), bg: Rgb(29, 32, 36), underline: Reset, modifier: DIM,
        x: 32, y: 7, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 7, y: 10, fg: Rgb(100, 180, 255), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Rgb(100, 180, 255), bg: Rgb(29, 32, 36), underline: Reset, modifier: BOLD,
        x: 12, y: 10, fg: Rgb(235, 238, 242), bg: Rgb(29, 32, 36), underline: Reset, modifier: BOLD,
        x: 32, y: 10, fg: Rgb(157, 164, 174), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 56, y: 10, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 57, y: 10, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 3, y: 11, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 4, y: 11, fg: Rgb(157, 164, 174), bg: Rgb(29, 32, 36), underline: Reset, modifier: DIM,
        x: 69, y: 11, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Rgb(245, 190, 80), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 14, fg: Rgb(245, 190, 80), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Rgb(61, 66, 74), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 16, fg: Rgb(219, 0, 0), bg: Rgb(36, 0, 0), underline: Reset, modifier: NONE,
        x: 3, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
