crates/coducktor-tui/src/widgets/snapshots/coducktor_tui__widgets__transcript__tests__transcript_expanded_120x40.snap
---
source: crates/coducktor-tui/src/widgets/transcript.rs
expression: "snapshot_at(true, width, height, ThemeName::Dark)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "▌ Add retry logic to the sync job.                                                                                      ",
        "                                                                                                                        ",
        "● I'll add exponential backoff to sync_job.                                                                             ",
        "                                                                                                                        ",
        "▾ Thinking — The job currently retries immediately on failure.                                                          ",
        "  The job currently retries immediately on failure. Exponential backoff avoids hammering the upstream API.              ",
        "                                                                                                                        ",
        "▸ ╭─── ✎ Edit src/sync_job.rs ─────────────────────────────────────────────────────────────────────────────────────────╮",
        "  │ └─ file_path=src/sync_job.rs                                                                                       │",
        "  ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯",
        "                                                                                                                        ",
        "▾ ╭─── ❯ Ran cargo test sync_job: Run the sync job tests ──────────────────────────────────────────────────────────────╮",
        "  │ $ cargo test sync_job                                                                                              │",
        "  ├─── Output ─────────────────────────────────────────────────────────────────────────────────────────────────────────┤",
        "  │ running 3 tests                                                                                                    │",
        "  │ test sync_job::tests::retries_on_failure ... ok                                                                    │",
        "  │ test result: ok. 3 passed                                                                                          │",
        "  ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯",
        "                                                                                                                        ",
        "· session resumed after usage limit                                                                                     ",
        "                                                                                                                        ",
        "· ▀                                                                                                                     ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "· ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "  │                                             image could not be decoded                                             │",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(61, 66, 74), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Rgb(235, 238, 242), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(168, 216, 80), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Rgb(235, 238, 242), bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 2, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 42, y: 2, fg: Rgb(235, 238, 242), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: DIM,
        x: 62, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 7, y: 7, fg: Rgb(120, 200, 120), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Rgb(120, 200, 120), bg: Rgb(29, 32, 36), underline: Reset, modifier: BOLD,
        x: 13, y: 7, fg: Rgb(235, 238, 242), bg: Rgb(29, 32, 36), underline: Reset, modifier: BOLD,
        x: 29, y: 7, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 30, y: 7, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 3, y: 8, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: Rgb(157, 164, 174), bg: Rgb(29, 32, 36), underline: Reset, modifier: DIM,
        x: 32, y: 8, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 119, y: 8, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: Rgb(157, 164, 174), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 7, y: 11, fg: Rgb(100, 180, 255), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Rgb(100, 180, 255), bg: Rgb(29, 32, 36), underline: Reset, modifier: BOLD,
        x: 12, y: 11, fg: Rgb(235, 238, 242), bg: Rgb(29, 32, 36), underline: Reset, modifier: BOLD,
        x: 32, y: 11, fg: Rgb(157, 164, 174), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 56, y: 11, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 57, y: 11, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 3, y: 12, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 4, y: 12, fg: Rgb(157, 164, 174), bg: Rgb(29, 32, 36), underline: Reset, modifier: DIM,
        x: 6, y: 12, fg: Rgb(136, 192, 208), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 11, y: 12, fg: Rgb(216, 222, 233), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 25, y: 12, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 119, y: 12, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 6, y: 13, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 14, y: 13, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 14, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 3, y: 14, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 4, y: 14, fg: Rgb(157, 164, 174), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 19, y: 14, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 119, y: 14, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 15, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 3, y: 15, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 4, y: 15, fg: Rgb(157, 164, 174), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 51, y: 15, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 119, y: 15, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 16, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 3, y: 16, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 4, y: 16, fg: Rgb(157, 164, 174), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 29, y: 16, fg: Reset, bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 119, y: 16, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 17, fg: Rgb(47, 51, 57), bg: Rgb(29, 32, 36), underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Rgb(245, 190, 80), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 19, fg: Rgb(245, 190, 80), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Rgb(61, 66, 74), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 21, fg: Rgb(219, 0, 0), bg: Rgb(36, 0, 0), underline: Reset, modifier: NONE,
        x: 3, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 38, fg: Rgb(61, 66, 74), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 38, fg: Rgb(61, 66, 74), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 39, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 39, fg: Rgb(61, 66, 74), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
